--- a/assignment/index.html
+++ b/assignment/index.html
@@ -4,9 +4,20 @@
     <meta charset="utf-8">
     <title>Week 4 Assignment</title>
     <!-- Create and link a CSS file! -->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheet.css"/>
   </head>
   <body>
-    <h1>Week 4 Assignment - Part 2</h1>
-    <p>Check console for errors.</p>
+    <header>
+      <h1>Week 4 Assignment - Part 2</h1>
+      <p>Check console for errors.</p>  
+    </header>
+  <h1> My name is Todd McCoy</h1>
+  <img src="greenlinetrain.jpg" alt="Metro Transit Green Line" style="width:500px;height:500px;">
+  <h3>
+    If at all possible I prefer using Metro Transit. 
+    <br>I live close to the Green Line Train and A Line bus.
+    <br>Because of that proximity I am able to get around quite easily given time to plan.
+    <br>I am very happy that Prime campus is close to a Green Line stop becuase parking downtown is a royal pain.
+  </h3>
   </body>
 </html>
